--- a/ansible/nym-node/roles/nym/templates/nym-node.service.j2
+++ b/ansible/nym-node/roles/nym/templates/nym-node.service.j2
@@ -6,7 +6,7 @@ StartLimitBurst=10
 [Service]
 User={{ ansible_user }}
 LimitNOFILE=65536
-ExecStart=/root/nym-binaries/nym-node run --mode exit-gateway --accept-operator-terms-and-conditions --wireguard-enabled true
+ExecStart=/root/nym-binaries/nym-node run --mode {{ mode }} --accept-operator-terms-and-conditions --wireguard-enabled {{ wireguard_enabled }}
 KillSignal=SIGINT
 Restart=on-failure
 RestartSec=30
