--- a/ansible/nym-node/roles/nym/templates/description.toml.j2
+++ b/ansible/nym-node/roles/nym/templates/description.toml.j2
@@ -15,6 +15,6 @@
 {% endif %}
 
 moniker = "{{ moniker_final }}"
-website = ""
+website = " {{ website }}"
 security_contact = "{{ email }}"
 details = "{{ description }}"
