--- a/ansible/nym-node/roles/nginx/tasks/templates/nginx-site.conf.j2
+++ b/ansible/nym-node/roles/nginx/tasks/templates/nginx-site.conf.j2
@@ -4,10 +4,15 @@ server {
 
     server_name {{ hostname }};
 
+    root /var/www/{{ hostname }};
+    index index.html;
+
+    location ^~ /.well-known/acme-challenge/ {
+        default_type "text/plain";
+        try_files $uri =404;
+    }
+
     location / {
-        proxy_pass http://127.0.0.1:8080;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        return 301 https://$host$request_uri;
     }
 }
